; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_gk104.c_gk104_ltc_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/ltc/extr_gk104.c_gk104_ltc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_ltc = type { i32, i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_ltc*)* @gk104_ltc_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gk104_ltc_init(%struct.nvkm_ltc* %0) #0 {
  %2 = alloca %struct.nvkm_ltc*, align 8
  %3 = alloca %struct.nvkm_device*, align 8
  %4 = alloca i32, align 4
  store %struct.nvkm_ltc* %0, %struct.nvkm_ltc** %2, align 8
  %5 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %2, align 8
  %6 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %5, i32 0, i32 2
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.nvkm_device*, %struct.nvkm_device** %7, align 8
  store %struct.nvkm_device* %8, %struct.nvkm_device** %3, align 8
  %9 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %10 = call i32 @nvkm_rd32(%struct.nvkm_device* %9, i32 1051776)
  %11 = and i32 %10, 1
  %12 = icmp ne i32 %11, 0
  %13 = xor i1 %12, true
  %14 = zext i1 %13 to i32
  store i32 %14, i32* %4, align 4
  %15 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %16 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %2, align 8
  %17 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %16, i32 0, i32 1
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @nvkm_wr32(%struct.nvkm_device* %15, i32 1566936, i32 %18)
  %20 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %21 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %2, align 8
  %22 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @nvkm_wr32(%struct.nvkm_device* %20, i32 1564672, i32 %23)
  %25 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %26 = load %struct.nvkm_ltc*, %struct.nvkm_ltc** %2, align 8
  %27 = getelementptr inbounds %struct.nvkm_ltc, %struct.nvkm_ltc* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 8
  %29 = call i32 @nvkm_wr32(%struct.nvkm_device* %25, i32 1566932, i32 %28)
  %30 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %31 = load i32, i32* %4, align 4
  %32 = icmp ne i32 %31, 0
  %33 = zext i1 %32 to i64
  %34 = select i1 %32, i32 2, i32 0
  %35 = call i32 @nvkm_mask(%struct.nvkm_device* %30, i32 1566912, i32 2, i32 %34)
  ret void
}

declare dso_local i32 @nvkm_rd32(%struct.nvkm_device*, i32) #1

declare dso_local i32 @nvkm_wr32(%struct.nvkm_device*, i32, i32) #1

declare dso_local i32 @nvkm_mask(%struct.nvkm_device*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
